--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@stripe/stripe-js": "^3.0.10",
     "@tailwindcss/forms": "^0.5.7",
     "axios": "^1.6.7",
+    "formik": "^2.4.6",
+    "lucide-react": "^0.546.0",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -26,7 +28,8 @@
     "react-router-dom": "^6.22.3",
     "react-spinners": "^0.13.8",
     "react-toastify": "^10.0.5",
-    "tailwind-scrollbar": "^3.1.0"
+    "tailwind-scrollbar": "^3.1.0",
+    "yup": "^1.7.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
